# hotstuff

./: Cargo.toml  LICENSE
app/: Cargo.toml  Config.toml
app/.cargo/: config.toml
app/src/: client.rs  config.rs  main.rs  network.rs  node.rs
consensus/: Cargo.toml
consensus/src/: block.rs  committee.rs  config.rs  handlers.rs  hotstuff.rs  leader_elector.rs  lib.rs  message.rs  pool.rs  proposer.rs  timeout.rs  transaction.rs  types.rs
crypto/: Cargo.toml
crypto/src/: aggregate.rs  aggregator.rs  hash.rs  keymanager.rs  keypair.rs  lib.rs  public_key.rs  secret_key.rs  signature.rs  signer.rs  types.rs  utils.rs
crypto/tests/: aggregate_tests.rs  common.rs  keypair_tests.rs  scenario_tests.rs  signature_tests.rs  utils.rs  utils_tests.rs
mempool/: Cargo.toml
mempool/src/: error.rs  lib.rs  pool.rs  transaction.rs  validator.rs
node/: Cargo.toml
node/src/: config.rs  node.rs
p2p/: Cargo.toml
p2p/src/: config.rs  coordinator.rs  dialer.rs  error.rs  handler.rs  handshake.rs  lib.rs  listener.rs  message.rs  network.rs  peer.rs  peer_manager.rs  receiver.rs  sender.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  serialization.rs  types.rs
rpc/: Cargo.toml
rpc/src/: api.rs  config.rs  convert.rs  error.rs  lib.rs  request.rs  server.rs  transaction.rs  types.rs
