[workspace]
members = [
    "app",
    "consensus",
    "mempool",
    "node",
    "p2p",
    "rpc",
]
resolver = "2"

[workspace.dependencies]
hotstuff-consensus = { version = "0.1.0", path = "consensus" }
hotstuff-mempool = { version = "0.1.0", path = "mempool" }
hotstuff-node = { version = "0.1.0", path = "node" }
hotstuff-p2p = { version = "0.1.0", path = "p2p" }
hotstuff-rpc = { version = "0.1.0", path = "rpc" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
