[workspace]
members = [
    "app",
    "consensus",
    "crypto",
    "mempool",
    "node",
    "p2p",
    "primitives",
    "rpc",
]
resolver = "2"

[workspace.dependencies]
hotstuff-consensus = { version = "0.1.0", path = "consensus" }
hotstuff-crypto = { version = "0.1.0", path = "crypto" }
hotstuff-mempool = { version = "0.1.0", path = "mempool" }
hotstuff-node = { version = "0.1.0", path = "node" }
hotstuff-p2p = { version = "0.1.0", path = "p2p" }
hotstuff-primitives = { version = "0.1.0", path = "primitives" }
hotstuff-rpc = { version = "0.1.0", path = "rpc" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
