[package]
name = "hotstuff-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[dependencies]
hotstuff-node = { workspace = true }
hotstuff-rpc = { workspace = true }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures = "0.3"
jsonrpsee = "0.24.3"
