[package]
name = "hotstuff-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hotstuff-p2p = { workspace = true } 

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
async-trait = "0.1"
futures-util = "0.3"
