[package]
name = "hotstuff-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hotstuff-consensus = { workspace = true }
hotstuff-rpc = { workspace = true }

tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.24.3",  features = [ "ws-client"] }
tracing = "0.1"