[package]
name = "hotstuff-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
thiserror = "1"
