[package]
name = "hotstuff-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hotstuff-consensus = { workspace = true }
hotstuff-mempool = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
jsonrpsee-types = "0.24"
thiserror = "1"
tracing = "0.1"
